_old/compiler/src/test/resources/errors/missing_dependency.jd
justification J4 implements missing_pattern {

    conclusion c is "my conclusion"
    strategy s is "my strategy"
    evidence e is "an evidence"

    e supports s
    s supports c

}
